--- a/Tagger/MainWindow.xaml
+++ b/Tagger/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Tagger.MainWindow"
+﻿<Window x:Class="Tagger.MainWindow " DragDrop.Drop="mePlayer_Drop" AllowDrop="True"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,18 +14,23 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
         Title="MainWindow" Height="324.074" Width="525">
-    <Grid Margin="0,0,0,0">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="1*" />
-        </Grid.ColumnDefinitions>
+    <Window.Resources>
+        <Image x:Key="Play" Source="Resource/play-2-24.png" Stretch="Fill"/>
+        <Image x:Key="Pause" Source="Resource/pause-2-24.png"/>
+    </Window.Resources>
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="10*" />
-            <RowDefinition Height="40*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Button Grid.Column="1">Submit</Button>
-        <TextBox Grid.Column="0" ></TextBox>
-        <MediaElement Grid.Row="1" Source="C:\Users\Maor\Downloads\The Walking Dead Season 4 Complete\The.Walking.Dead.S04E01.HDTV.x264-ASAP.mp4" />
+        <ToolBar>
+            <Button Click="Button_Click" Name="btnPlay" IsEnabled="False" >
+                <DynamicResource ResourceKey="Play"/>
+            </Button>
+        </ToolBar>
+
+        <MediaElement Name="mePlayer" Grid.Row="1" LoadedBehavior="Manual" Stretch="None" />
 
     </Grid>
 </Window>
