--- a/Tagger/MainWindow.xaml
+++ b/Tagger/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Tagger.MainWindow " DragDrop.Drop="mePlayer_Drop" AllowDrop="True"
+﻿<Window x:Class="Tagger.MainWindow " DragDrop.Drop="mePlayer_Drop" DragDrop.DragEnter="dragEnter" AllowDrop="True"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -13,15 +13,14 @@
         TextOptions.TextRenderingMode="Auto"        
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
-        Title="MainWindow" >
+        Title="Tagger" >
     <Window.Resources>
-        <Image x:Key="Play" Source="Resource/play-2-24.png" Stretch="Fill"/>
+        <Image x:Key="Play" Source="Resource/play-2-24.png"/>
         <Image x:Key="Pause" Source="Resource/pause-2-24.png"/>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <ToolBar>
@@ -32,8 +31,8 @@
             <TextBox Name="tagBox" Width="600" KeyUp="keyUpTagBox" IsEnabled="False">
             </TextBox>
         </ToolBar>
-
-        <MediaElement Name="mePlayer" Grid.Row="1" LoadedBehavior="Manual" Stretch="UniformToFill" StretchDirection="DownOnly" ScrubbingEnabled="True" />
-
+        <Border Background="Black" Grid.Row="1">
+            <MediaElement Name="mePlayer" LoadedBehavior="Manual" Stretch="UniformToFill" StretchDirection="DownOnly" ScrubbingEnabled="True" MediaOpened="VideoLoaded" />
+        </Border>
     </Grid>
 </Window>
